--- a/contact.html
+++ b/contact.html
@@ -70,7 +70,7 @@
       </div>
       
       <div class="walk-img">
-          <img src="img/space-walk.png" alt="Space walking astronaut">
+          <img src="img/cosmos.jpg" alt="cosmos">
       </div>
 
     </section>
